Revise README for clarity and additional badges
Updated README to enhance clarity and structure, added badges, and refined project descriptions.